fixed css glitches when table is too big
Former-commit-id: 852bfcb17cd49b4d58b4ebf46ad2a395a19d698f

--- a/desktop/src/app/components/profile/profile.component.scss
+++ b/desktop/src/app/components/profile/profile.component.scss
@@ -55,9 +55,10 @@
 }
 
 #information {
+    margin-top: 30px;
     overflow-y: scroll;
     width: 90%;
-    height: 80%;
+    height: 500px;
     display: flex;
     justify-content: center;
 }
